--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <main>
       <div class="container">
-        <div class="title"> Calculadora - IMC </div>
+        <div class="title"> Calculadora - 
+          
+          IMC </div>
         <div class="input">
             <label>Nome:</label>
             <input type="text" id='nome'>
